--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
