--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
-    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.16",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
