--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.59.7",
