--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-devtools": "^5.59.16",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
+    "lucide-react": "^0.460.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
