--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.59.7",
