--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
