--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-select": "^5.8.3",
+    "react-toastify": "^10.0.6",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
