--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.6.14",
     "@hookform/resolvers": "^3.9.1",
-    "@heroui/react": "2.6.14",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.16",
     "axios": "^1.7.7",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.460.0",
     "next": "14.2.15",
     "react": "^18",
