--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
+    "component": "cypress open --component",
+    "component:headless": "cypress run --component"
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
@@ -22,6 +26,7 @@
     "react-hook-form": "^7.53.2",
     "react-select": "^5.8.3",
     "react-toastify": "^10.0.6",
+    "start-server-and-test": "^2.0.11",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
@@ -30,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^14.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
